@@ -1,14 +1,18 @@
 package com.envisionad.webservice.media.PresentationLayer;
 
+import com.envisionad.webservice.business.presentationlayer.models.BusinessResponseModel;
+import com.envisionad.webservice.business.businesslogiclayer.BusinessService;
 import com.envisionad.webservice.media.DataAccessLayer.Media;
 import com.envisionad.webservice.media.DataAccessLayer.MediaRepository;
 import com.envisionad.webservice.media.DataAccessLayer.Status;
 import com.envisionad.webservice.media.DataAccessLayer.TypeOfDisplay;
 import com.envisionad.webservice.media.PresentationLayer.Models.MediaRequestModel;
-import com.envisionad.webservice.utils.EmailService;
 import com.envisionad.webservice.media.PresentationLayer.Models.ScheduleModel;
 import com.envisionad.webservice.media.PresentationLayer.Models.WeeklyScheduleEntry;
+import com.envisionad.webservice.payment.dataaccesslayer.StripeAccount;
+import com.envisionad.webservice.payment.dataaccesslayer.StripeAccountRepository;
 import java.util.List;
+import java.util.Optional;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -23,10 +27,11 @@ import org.springframework.web.reactive.function.BodyInserters;
 import java.util.UUID;
 
 import java.math.BigDecimal;
-import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.anyString;
+import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.when;
 import static org.springframework.boot.test.context.SpringBootTest.WebEnvironment.RANDOM_PORT;
 
@@ -38,6 +43,7 @@ import static org.springframework.boot.test.context.SpringBootTest.WebEnvironmen
 class MediaControllerIntegrationTest {
 
         private final String BASE_URI_MEDIA = "/api/v1/media";
+        private final String BUSINESS_ID = UUID.randomUUID().toString();
 
         @Autowired
         private WebTestClient webTestClient;
@@ -46,7 +52,10 @@ class MediaControllerIntegrationTest {
         private JwtDecoder jwtDecoder;
 
         @MockitoBean
-        private EmailService emailService;
+        private BusinessService businessService;
+
+        @MockitoBean
+        private StripeAccountRepository stripeAccountRepository;
 
         @Autowired
         private MediaRepository mediaRepository;
@@ -72,10 +81,21 @@ class MediaControllerIntegrationTest {
                                                 "update:media"))
                                 .build();
 
-                when(jwtDecoder.decode(anyString())).thenReturn(jwt);
+                when(jwtDecoder.decode("mock-token")).thenReturn(jwt);
+
+                BusinessResponseModel businessResponseModel = new BusinessResponseModel();
+                businessResponseModel.setBusinessId(BUSINESS_ID);
+                when(businessService.getBusinessByUserId(any(), anyString())).thenReturn(businessResponseModel);
 
                 com.envisionad.webservice.media.DataAccessLayer.MediaLocation location = new com.envisionad.webservice.media.DataAccessLayer.MediaLocation();
                 location.setName("Downtown Billboard A");
+
+                // Mock StripeAccountRepository to prevent StripeAccountNotOnboardedException
+                StripeAccount mockStripeAccount = mock(StripeAccount.class);
+                when(mockStripeAccount.isOnboardingComplete()).thenReturn(true);
+                when(mockStripeAccount.isChargesEnabled()).thenReturn(true);
+                when(mockStripeAccount.isPayoutsEnabled()).thenReturn(true);
+                when(stripeAccountRepository.findByBusinessId(anyString())).thenReturn(Optional.of(mockStripeAccount));
                 location.setDescription("Large DIGITAL billboard");
                 location.setCountry("Canada");
                 location.setProvince("ON");
@@ -233,7 +253,7 @@ class MediaControllerIntegrationTest {
         @Test
         void deleteMedia_ShouldRemoveMedia() {
                 // Arrange
-                Media media = mediaRepository.findAll().get(0);
+                Media media = mediaRepository.findAll().getFirst();
                 String mediaIdToDelete = media.getId().toString();
 
                 // Act & Assert
